[TAA-1] Add springboot admin

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=authentication
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operations-sorter=method
+server.port=8082
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/authentication
 spring.datasource.username=postgres
@@ -8,3 +9,4 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.jdbc.dialect=postgresql
 spring.jpa.hibernate.ddl-auto=update
+spring.boot.admin.client.url=http://localhost:42069/api/v1/admin
