--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -8,5 +8,5 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.jdbc.dialect=postgresql
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.boot.admin.client.url=http://localhost:42069/api/v1/admin
