--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
         <java.version>21</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
         <swagger.version>2.2.0</swagger.version>
+        <jjwt.version>0.12.6</jjwt.version>
+        <dotenv.version>4.0.0</dotenv.version>
+        <admin.version>3.0.0</admin.version>
     </properties>
     <dependencies>
         <dependency>
