--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=authentication
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 springdoc.swagger-ui.operations-sorter=method
 server.port=8082
+security.jwt.secret-key=${JWT_SECRET}
+security.jwt.duration-time=300000
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/authentication
 spring.datasource.username=postgres
