--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,15 @@
         <java.version>21</java.version>
         <revision>0.0.1-SNAPSHOT</revision>
         <swagger.version>2.2.0</swagger.version>
+        <jjwt.version>0.12.6</jjwt.version>
+        <dotenv.version>4.0.0</dotenv.version>
+        <admin.version>3.0.0</admin.version>
     </properties>
     <dependencies>
         <dependency>
             <groupId>de.codecentric</groupId>
             <artifactId>spring-boot-admin-starter-client</artifactId>
-            <version>3.0.0</version>
+            <version>${admin.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -63,6 +66,20 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <scope>annotationProcessor</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>me.paulschwarz</groupId>
+            <artifactId>spring-dotenv</artifactId>
+            <version>${dotenv.version}</version>
         </dependency>
     </dependencies>
 
