[TA-15] Set up mailgun client

--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -18,5 +18,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.mailgun</groupId>
+            <artifactId>mailgun-java</artifactId>
+            <version>${mailgun.version}</version>
+        </dependency>
     </dependencies>
 </project>
