--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.jdbc.dialect=postgresql
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.boot.admin.client.url=http://localhost:42069/api/v1/admin
+
+mailgun.api-key=${MAILGUN_API_KEY}
+mailgun.domain=${MAILGUN_DOMAIN}
