[TA-15] Create a mail service which uses the mailgun client and an email template to send a confirmation email

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,5 +47,10 @@
             <artifactId>jjwt-jackson</artifactId>
             <version>${jjwt.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
+        </dependency>
     </dependencies>
 </project>
