[TA-15] Add mongodb dependency. Create mongodb collection for storing verification codes with a ttl of 30 minutes

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
             <artifactId>bcprov-jdk18on</artifactId>
             <version>${bouncycastle.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
