--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -10,8 +10,17 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.jdbc.dialect=postgresql
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.boot.admin.client.url=http://localhost:42069/api/v1/admin
 
 mailgun.api-key=${MAILGUN_API_KEY}
 mailgun.domain=${MAILGUN_DOMAIN}
+
+spring.data.mongodb.host=localhost
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=verification
+spring.data.mongodb.username=admin123
+spring.data.mongodb.password=admin123
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uuid-representation=standard
