--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,9 @@
         <admin.version>3.0.0</admin.version>
         <vavr.version>0.10.4</vavr.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
+        <freemarker.version>2.3.33</freemarker.version>
+        <mailgun.version>1.1.3</mailgun.version>
+
     </properties>
     <dependencies>
         <dependency>
@@ -92,6 +95,10 @@
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk18on</artifactId>
             <version>${bouncycastle.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
     </dependencies>
 
