--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>api</module>
         <module>core</module>
         <module>rest</module>
+        <module>restexport</module>
     </modules>
     <properties>
         <java.version>21</java.version>
@@ -32,7 +33,7 @@
         <bouncycastle.version>1.78.1</bouncycastle.version>
         <freemarker.version>2.3.33</freemarker.version>
         <mailgun.version>1.1.3</mailgun.version>
-
+        <openfeign.version>4.1.3</openfeign.version>
     </properties>
     <dependencies>
         <dependency>
