[TA-40] Move dependencies from the bom to the corresponding module poms

--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -19,13 +19,14 @@
     <dependencies>
         <dependency>
             <groupId>com.tinqinacademy.authentication</groupId>
-            <artifactId>api</artifactId>
-            <version>${revision}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.tinqinacademy.authentication</groupId>
             <artifactId>core</artifactId>
             <version>${revision}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.bucket4j</groupId>
+            <artifactId>bucket4j-core</artifactId>
+            <version>${bucket4j.version}</version>
         </dependency>
     </dependencies>
 
