[TA-42] Create dockerfile and movie properties to env file

--- a/rest/src/main/resources/application.properties
+++ b/rest/src/main/resources/application.properties
@@ -5,22 +5,22 @@ server.port=8082
 security.jwt.secret-key=${JWT_SECRET}
 security.jwt.duration-time=300000
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/authentication
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.data.jdbc.dialect=postgresql
 spring.jpa.hibernate.ddl-auto=update
-spring.boot.admin.client.url=http://localhost:42069/api/v1/admin
+spring.boot.admin.client.url=${ADMIN_CLIENT_URL}
 
 mailgun.api-key=${MAILGUN_API_KEY}
 mailgun.domain=${MAILGUN_DOMAIN}
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=${MONGO_DB_HOST}
 spring.data.mongodb.auto-index-creation=true
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=verification
-spring.data.mongodb.username=admin123
-spring.data.mongodb.password=admin123
+spring.data.mongodb.port=${MONGO_DB_PORT}
+spring.data.mongodb.database=${MONGO_DB_NAME}
+spring.data.mongodb.username=${MONGO_DB_USERNAME}
+spring.data.mongodb.password=${MONGO_DB_PASSWORD}
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.uuid-representation=standard
